refactor(auth): replace HttpServer with ServerSocket, use HttpURLConnection
- Replace com.sun.net.httpserver.HttpServer with java.net.ServerSocket for OAuth callback listener
- Replace HTTP client library with HttpURLConnection (pure JRE, no external deps)